<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.vichit.khmersong.fragment.main.RequestSongFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">


            <TextView
                android:id="@+id/tvCompletConditon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:text="@string/text_complet_condition"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCompletConditon"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edSongName_requestSong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_my_edittext"
                    android:hint="@string/hint_name_song"
                    android:padding="15dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edSingerName_requestSong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_my_edittext"
                    android:hint="@string/hint_name_singer"
                    android:padding="15dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edSomethingInput_requestSong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_my_edittext"
                    android:hint="@string/hint_something_input"
                    android:padding="15dp"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btnSubmitRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_my_button"
                    android:text="@string/text_btn_submit"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
